fix contrast error

--- a/src/components/DiscountBanner.scss
+++ b/src/components/DiscountBanner.scss
@@ -1,6 +1,7 @@
 @import "../styles/global";
 
 .discount-banner {
+  background-color: $dark500;
   display: flex;
   flex-direction: column;
   align-items: center;
